initial events page design complete

--- a/react-frontend-ui/src/App.css
+++ b/react-frontend-ui/src/App.css
@@ -2,6 +2,12 @@ img {
   height: 75px;
 }
 
+.sticky{
+  width: 23% !important;
+  border: 1px solid #006555 !important;
+  color: #006555;
+  height: 755px !important;
+}
 
 .homePage {
   background-image: url('https://lh3.googleusercontent.com/proxy/HPQ03_pbU84q1RtHQN2PgJQ5D5cYRmjiJqX6o3s8Nb2eakwlaiHkB74_OHfTaL_HqNlPD4DT5yv8BLpUHkluduSno576LP0PxXsNKI_DjU_lSKvhYj0QSlzjw0g');
