--- a/react-frontend-ui/src/App.css
+++ b/react-frontend-ui/src/App.css
@@ -6,9 +6,11 @@
   width:85%;
 }
 
-.btn-success {
+.zenFamily {
   margin-bottom: 10px;
   margin-left: 100px;
+  color: #61dafb;
+  text-decoration: underline;
 }
 
 .label{
